--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding: 2rem 0;
   /* padding: 2rem 0;
   flex: 1;
   display: flex;
@@ -13,7 +14,7 @@
 .container {
   width: 100%;
   max-width: 1200px;
-  margin: 3rem auto 0rem;
+  margin: 0rem auto 2rem;
 }
 
 .footer {
@@ -47,6 +48,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  margin-bottom: 1rem;
 }
 
 .title,
@@ -75,6 +77,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  margin: 0 auto;
 }
 
 .card {
