--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 2rem 0;
+  padding-bottom: 0;
   /* padding: 2rem 0;
   flex: 1;
   display: flex;
